@@ -3,7 +3,7 @@ SpaceFM Contributors
 Developer:      IgnorantGuru <ignorantguru@gmx.com>
 
 Contributors:   BwackNinja <BwackNinja@gmail.com>
-                OmegaPhil <OmegaPhil+SpaceFM@gmail.com>
+                OmegaPhil <OmegaPhil@startmail.com>
 
 Artwork:        SpaceFM icons and logo by Goran Simovic
                 Additional icons from the Tango Desktop Project icon set
@@ -26,15 +26,15 @@ SpaceFM is developed on geany, gcc, and git, with a little help from gdb.
 PCManFM Legacy Code:
 
     Developer: (Hong Jen Yee, aka PCMan) <pcman.tw@gmail.com>
-    Contributors: (alphabet order)
-    Cantona <cantona@cantona.net>
-    Orlando Fiol <fiolorlando@gmail.com>
-    Jim Huang (jserv) <jserv.tw@gmail.com>
-    Ying-Chun Liu (PaulLiu) <grandpaul@gmail.com>
-    Mamoru Tasaka <mtasaka@ioa.s.u-tokyo.ac.jp>
-    Kirilov Georgi <kirilov-georgi@users.sourceforge.net>
-    Martijn Dekker <mcdutchie@users.sourceforge.net>
-    Eugene Arshinov (statc) <earshinov@gmail.com>
+    Contributors: (in alphabetical order )
+        Cantona <cantona@cantona.net>
+        Orlando Fiol <fiolorlando@gmail.com>
+        Jim Huang (jserv) <jserv.tw@gmail.com>
+        Ying-Chun Liu (PaulLiu) <grandpaul@gmail.com>
+        Mamoru Tasaka <mtasaka@ioa.s.u-tokyo.ac.jp>
+        Kirilov Georgi <kirilov-georgi@users.sourceforge.net>
+        Martijn Dekker <mcdutchie@users.sourceforge.net>
+        Eugene Arshinov (statc) <earshinov@gmail.com>
 
 PCManFM Legacy Translators: ( in alphabetical order )
 
