@@ -1795,7 +1795,6 @@ void app_job( GtkWidget* item, GtkWidget* app_item )
                                                     desktop_file->file_name, NULL );
         if ( !g_file_test( path, G_FILE_TEST_EXISTS ) )
         {
-            // need to copy
             char* share_desktop = vfs_mime_type_locate_desktop_file( NULL,
                                                         desktop_file->file_name );
             if ( !( share_desktop && strcmp( share_desktop, path ) ) )
@@ -1804,6 +1803,23 @@ void app_job( GtkWidget* item, GtkWidget* app_item )
                 g_free( path );
                 return;
             }
+
+            char* msg = g_strdup_printf( _("The file '%s' does not exist.\n\nBy copying '%s' to '%s' and editing it, you can adjust the behavior and appearance of this application for the current user.\n\nCreate this copy now?"), path, share_desktop, path );
+            if ( xset_msg_dialog( GTK_WIDGET( data->browser ),
+                          GTK_MESSAGE_QUESTION,
+                          _( "Copy Desktop File" ), NULL,
+                          GTK_BUTTONS_YES_NO,
+                          msg,
+                          NULL, "#designmode-mime-appdesktop" ) != GTK_RESPONSE_YES )
+            {
+                g_free( share_desktop );
+                g_free( path );
+                g_free( msg );
+                break;
+            }
+            g_free( msg );
+
+            // need to copy
             xset_copy_file( share_desktop, path );
             g_free( share_desktop );
             if ( !g_file_test( path, G_FILE_TEST_EXISTS ) )
@@ -1874,13 +1890,33 @@ void app_job( GtkWidget* item, GtkWidget* app_item )
         g_free( str );
         if ( !g_file_test( path, G_FILE_TEST_EXISTS ) )
         {
-            // need to create
-            char* msg = g_strdup_printf( "<?xml version='1.0' encoding='utf-8'?>\n<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>\n<mime-type type='%s'>\n\n<!-- This file was generated by SpaceFM to allow you to change the name of the\n     above mime type and to change the filename or magic patterns that define\n     this type.\n     \n     IMPORTANT:  After saving this file, restart SpaceFM.  You may need to run:\n         update-mime-database ~/.local/share/mime\n\n     Delete this file from ~/.local/share/mime/packages/ to revert to default.\n     \n     To make this definition file apply to all users, copy this file to \n     /usr/share/mime/packages/ and:  sudo update-mime-database /usr/share/mime\n\n     For help editing this file:\n     http://library.gnome.org/admin/system-admin-guide/stable/mimetypes-source-xml.html.en\n     http://www.freedesktop.org/wiki/Specifications/AddingMIMETutor\n\n     Example to define the name of a PNG file (with optional translations):\n\n        <comment>Portable Network Graphics file</comment>\n        <comment xml:lang=\"en\">Portable Network Graphics file</comment>\n     \n     Example to detect PNG files by glob pattern:\n\n        <glob pattern=\"*.png\"/>\n\n     Example to detect PNG files by file contents:\n\n        <magic priority=\"50\">\n            <match type=\"string\" value=\"\\x89PNG\" offset=\"0\"/>  \n        </magic>\n-->", mime_type->type );
-            
-            // build from /usr/share/mime type ?
             str = g_strdup_printf( "%s.xml", mime_type->type );
             char* usr_path = g_build_filename( "/usr/share/mime", str, NULL );
             g_free( str );
+
+            char* msg;
+            if ( g_file_test( usr_path, G_FILE_TEST_EXISTS ) )
+                msg = g_strdup_printf( _("The file '%s' does not exist.\n\nBy copying '%s' to '%s' and editing it, you can adjust how MIME type '%s' files are recognized for the current user.\n\nCreate this copy now?"), path, usr_path, path, mime_type->type );
+            else
+                msg = g_strdup_printf( _("The file '%s' does not exist.\n\nBy creating new file '%s' and editing it, you can define how MIME type '%s' files are recognized for the current user.\n\nCreate this file now?"), path, path, mime_type->type );
+            if ( xset_msg_dialog( GTK_WIDGET( data->browser ),
+                          GTK_MESSAGE_QUESTION,
+                          _( "Create New XML" ), NULL,
+                          GTK_BUTTONS_YES_NO,
+                          msg,
+                          NULL, "#designmode-mime-xml" ) != GTK_RESPONSE_YES )
+            {
+                g_free( usr_path );
+                g_free( path );
+                g_free( msg );
+                break;
+            }
+            g_free( msg );
+
+            // need to create
+            msg = g_strdup_printf( "<?xml version='1.0' encoding='utf-8'?>\n<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>\n<mime-type type='%s'>\n\n<!-- This file was generated by SpaceFM to allow you to change the name of the\n     above mime type and to change the filename or magic patterns that define\n     this type.\n     \n     IMPORTANT:  After saving this file, restart SpaceFM.  You may need to run:\n         update-mime-database ~/.local/share/mime\n\n     Delete this file from ~/.local/share/mime/packages/ to revert to default.\n     \n     To make this definition file apply to all users, copy this file to \n     /usr/share/mime/packages/ and:  sudo update-mime-database /usr/share/mime\n\n     For help editing this file:\n     http://library.gnome.org/admin/system-admin-guide/stable/mimetypes-source-xml.html.en\n     http://www.freedesktop.org/wiki/Specifications/AddingMIMETutor\n\n     Example to define the name of a PNG file (with optional translations):\n\n        <comment>Portable Network Graphics file</comment>\n        <comment xml:lang=\"en\">Portable Network Graphics file</comment>\n     \n     Example to detect PNG files by glob pattern:\n\n        <glob pattern=\"*.png\"/>\n\n     Example to detect PNG files by file contents:\n\n        <magic priority=\"50\">\n            <match type=\"string\" value=\"\\x89PNG\" offset=\"0\"/>  \n        </magic>\n-->", mime_type->type );
+            
+            // build from /usr/share/mime type ?
             char* contents = NULL;
             if ( g_file_get_contents ( usr_path, &contents, NULL, NULL ) )
             {
